--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
 <section id="enlace-comentarios">
     <h2>¿Tienes algo que contarnos?</h2>
-    <a href="comentarios.html">Envíanos tu comentario</a>
+    <a href="comentarios">Envíanos tu comentario</a>
 </section>
 
 <script>
