--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
             transform: scale(0.97);
         }
 
-        /* Animación de pétalos */
         .petalo-animado {
             position: absolute;
             top: -50px;
@@ -222,7 +221,39 @@
     <img src="https://pngimg.com/uploads/autumn_leaves/autumn_leaves_PNG3610.png" class="hojas hoja5">
 </header>
 
-<!-- El resto del contenido sigue igual -->
+<div class="seccion-productos" id="libros">
+    <h2>Libros Eternos</h2>
+    <div class="contenedor-scroll">
+        <div class="tarjeta-producto">
+            <img src="https://via.placeholder.com/300x200" alt="Libro 1">
+            <h3>Libro 1</h3>
+            <button class="pagar-yape-btn" data-producto="Libro 1">Pagar por Yape</button>
+        </div>
+        <div class="tarjeta-producto">
+            <img src="https://via.placeholder.com/300x200" alt="Libro 2">
+            <h3>Libro 2</h3>
+            <button class="pagar-yape-btn" data-producto="Libro 2">Pagar por Yape</button>
+        </div>
+        <!-- Agrega más productos aquí -->
+    </div>
+</div>
+
+<div class="seccion-productos" id="electrodomesticos">
+    <h2>Electrodomésticos</h2>
+    <div class="contenedor-scroll">
+        <div class="tarjeta-producto">
+            <img src="https://via.placeholder.com/300x200" alt="Electrodoméstico 1">
+            <h3>Electrodoméstico 1</h3>
+            <button class="pagar-yape-btn" data-producto="Electrodoméstico 1">Pagar por Yape</button>
+        </div>
+        <!-- Agrega más productos aquí -->
+    </div>
+</div>
+
+<div id="enlace-comentarios">
+    <h2>Deja tu comentario</h2>
+    <a href="#comentarios">Ir a Comentarios</a>
+</div>
 
 </body>
 </html>
